Add redis cache and install RabbitMQ

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,18 @@ services:
         ports:
         - 6379:6379
 
+    ####################################################################################################
+    # RabbitMQ
+    ####################################################################################################
+    rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+            - 5672:5672
+            - 15672:15672
+        volumes:
+            - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+            - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+
     # ####################################################################################################
     # # DATABASE (MariaDB)
     # ####################################################################################################
