--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,12 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "php-amqplib/php-amqplib": "^2.0",
+        "predis/predis": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.13",
         "driftingly/rector-laravel": "^1.0",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
