--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,11 @@
         "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0",
+        "laravel/horizon": "^5.29",
+        "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.2",
         "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1",
         "php-amqplib/php-amqplib": "^2.0",
         "predis/predis": "^2.2"
     },
@@ -64,7 +68,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
